[package]
name = "be-toko-online-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
dotenvy = "0.15"
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.5.2"
hyper = { version = "1.7", features = ["full"] }
argon2 = "0.5"
jsonwebtoken = "9"
chrono = "0.4"
tower-http = { version = "0.6.6", features = ["cors"] }