[package]
name = "be-toko-online-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Web Framework ---
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
dotenv = "0.15"
argon2 = "0.5"
rand = "0.8"

# --- GraphQL ---
async-graphql = { version = "7.0", features = ["chrono", "bigdecimal"] }
async-graphql-axum = "7.0.17"

# --- Database (SeaORM + SQLx, PostgreSQL only) ---
sea-orm = { version = "1.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-bigdecimal"
] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "bigdecimal"
] }

# --- Serialization ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# --- Environment & Config ---
dotenvy = "0.15"

# --- Utilities ---
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# --- Authentication & Security ---
bcrypt = "0.17.1"
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }

# --- Error Handling ---
anyhow = "1.0"
thiserror = "2.0"
