[package]
name = "be-toko-online-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "be-toko-online-rust"
path = "src/main.rs"

[dependencies]
# --- Web Framework ---
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# --- Database & Migration ---
sea-orm = { version = "1.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "with-chrono",
    "with-bigdecimal",
] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "bigdecimal",
] }



# --- GraphQL ---
async-graphql = { version = "7.0", features = ["chrono", "bigdecimal"] }
async-graphql-axum = "7.0"

# --- HTTP Client (for Xendit API) ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Date & Time ---
chrono = { version = "0.4", features = ["serde"] }

# --- Decimal Numbers ---
bigdecimal = { version = "0.4", features = ["serde"] }

# --- UUID ---
uuid = { version = "1.0", features = ["v4", "serde"] }

# --- Authentication & Security ---
bcrypt = "0.17"
argon2 = "0.5"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
base64 = "0.22"
rand = "0.8"

# --- Environment & Config ---
dotenvy = "0.15"

# --- Error Handling ---
anyhow = "1.0"
thiserror = "2.0"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
